--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
   "bugs": {
     "url": "https://github.com/FENIX-Platform-Projects/countrystat-ui/issues"
   },
-  "bugs": {
-    "url": "https://github.com/FENIX-Platform-Projects/countrystat-ui/issues"
-  },
   "dependencies": {
     "amplify-pubsub": "^0.0.1",
     "bootstrap": "^3.3.7",
     "draggabilly": "^2.1.1",
+    "fenix-ui-analysis": "^3.0.0-beta.3",
     "jquery": "^3.1.0",
     "loglevel": "^1.4.1",
     "packery": "^2.1.1",
