--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=develop webpack-dev-server --display-error-details --progress --color --content-base dev  --inline --hot",
-    "build": "NODE_ENV=production webpack --display-error-details"
+    "dev": "echo \"Error: please specify a valid section to develop [e.g. npm run dev:analysis]\" && exit 1",
+    "dev:analysis": "SECTION=analysis NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
+    "dev:data_management": "SECTION=data_management NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
+    "build": "SECTIONS=analysis,data_management NODE_ENV=production webpack --display-error-details"
   },
   "repository": {
     "type": "git",
@@ -18,14 +20,8 @@
     "url": "https://github.com/FENIX-Platform-Projects/countrystat-ui/issues"
   },
   "dependencies": {
-    "amplify-pubsub": "^0.0.1",
-    "bootstrap": "^3.3.7",
-    "draggabilly": "^2.1.1",
     "fenix-ui-analysis": "^3.0.0-beta.3",
-    "jquery": "^3.1.0",
-    "loglevel": "^1.4.1",
-    "packery": "^2.1.1",
-    "underscore": "^1.8.3"
+    "jquery": "^3.1.0"
   },
   "devDependencies": {
     "bootstrap-loader": "^2.0.0-beta.11",
