--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "fenix-ui-analysis": "^3.0.0-beta.3",
+    "fenix-ui-data-management": "^2.0.0-beta.2",
     "jquery": "^3.1.0"
   },
   "devDependencies": {
