--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "echo \"Error: please specify a valid section to develop [e.g. npm run dev:analysis]\" && exit 1",
-    "dev:analysis": "SECTION=analysis NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
-    "dev:data_management": "SECTION=data_management NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
+    "dev:analysis": "SECTIONS=analysis NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
+    "dev:data_management": "SECTIONS=data_management NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
     "w-dev:data_managment" : "SET NODE_ENV=develop&&SET SECTION=data_management&&webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
     "build": "SECTIONS=analysis,data_management NODE_ENV=production webpack --display-error-details --profile --json  > stats.json"
   },
@@ -24,8 +24,7 @@
     "bootstrap-table": "^1.11.0",
     "fenix-ui-analysis": "^3.0.0-beta.10",
     "fenix-ui-data-management": "^2.0.0-beta.15",
-    "jquery": "^3.1.0",
-    "webpack": "^1.13.3"
+    "jquery": "^3.1.0"
   },
   "devDependencies": {
     "bootstrap-loader": "^2.0.0-beta.11",
@@ -55,7 +54,7 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
+    "webpack": "^1.13.3",
     "webpack-dev-server": "^1.15.1"
   }
 }
