--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:analysis": "SECTIONS=analysis NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
     "dev:data_management": "SECTIONS=data_management NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
     "w-dev:data_managment" : "SET NODE_ENV=develop&&SET SECTION=data_management&&webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
-    "build": "SECTIONS=analysis,data_management NODE_ENV=production webpack --display-error-details --profile --json  > stats.json"
+    "build": "SECTIONS=analysis,data_management NODE_ENV=production webpack --display-error-details --profile --json  > stats.json",
+    "w-build": "SET SECTIONS=analysis,data_management&&SET NODE_ENV=production&&webpack --display-error-details --profile --json  > stats.json"
   },
   "repository": {
     "type": "git",
