--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "echo \"Error: please specify a valid section to develop [e.g. npm run dev:analysis]\" && exit 1",
     "dev:analysis": "SECTIONS=analysis NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
     "dev:data_management": "SECTIONS=data_management NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
-    "w-dev:data_managment": "SET NODE_ENV=develop&&SET SECTION=data_management&&webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
+    "w-dev:data_managment": "SET SECTIONS=data_management&&SET NODE_ENV=develop&&webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
     "build": "SECTIONS=base,analysis,data_management NODE_ENV=production webpack --display-error-details ",
     "build:stats": "SECTIONS=base,analysis,data_management NODE_ENV=production webpack --display-error-details --profile --json  > stats.json",
     "w-build": "SET SECTIONS=base,analysis,data_management&&SET NODE_ENV=production&&webpack --display-error-details",
