--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "bootstrap": "^3.3.7",
     "fenix-ui-analysis": "^3.0.0-beta.24",
     "fenix-ui-data-management": "^2.0.0-beta.39",
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "progressbar.js": "^1.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
