--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:data_management": "SECTIONS=data_management NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
     "w-dev:data_managment": "SET SECTIONS=data_management&&SET NODE_ENV=develop&&webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
     "build": "SECTIONS=base,analysis,data_management NODE_ENV=production webpack --display-error-details ",
+    "build:base": "SECTIONS=base NODE_ENV=production webpack --display-error-details ",
     "build:stats": "SECTIONS=base,analysis,data_management NODE_ENV=production webpack --display-error-details --profile --json  > stats.json",
     "w-build": "SET SECTIONS=base,analysis,data_management&&SET NODE_ENV=production&&webpack --display-error-details",
     "w-build:stats": "SET SECTIONS=base,analysis,data_management&&SET NODE_ENV=production&&webpack --display-error-details --profile --json  > stats.json"
