--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "echo \"Error: please specify a valid section to develop [e.g. npm run dev:analysis]\" && exit 1",
     "dev:analysis": "SECTIONS=analysis NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
+    "w-dev:analysis": "SET SECTIONS=analysis&&SET NODE_ENV=develop&&webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
     "dev:base": "SECTIONS=base NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
     "dev:data_management": "SECTIONS=data_management NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
     "w-dev:data_management": "SET SECTIONS=data_management&&SET NODE_ENV=develop&&webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
