--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "echo \"Error: please specify a valid section to develop [e.g. npm run dev:analysis]\" && exit 1",
-    "dev:analysis": "SECTIONS=analysis NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
-    "w-dev:analysis": "SET SECTIONS=analysis&&SET NODE_ENV=develop&&webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
-    "dev:base": "SECTIONS=base NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
-    "dev:data_management": "SECTIONS=data_management NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
-    "w-dev:data_management": "SET SECTIONS=data_management&&SET NODE_ENV=develop&&webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
-    "build": "SECTIONS=base,analysis,data_management NODE_ENV=production webpack --display-error-details ",
-    "build:base": "SECTIONS=base NODE_ENV=production webpack --display-error-details ",
-    "build:stats": "SECTIONS=base,analysis,data_management NODE_ENV=production webpack --display-error-details --profile --json  > stats.json",
-    "w-build": "SET SECTIONS=base,analysis,data_management&&SET NODE_ENV=production&&webpack --display-error-details",
-    "w-build:stats": "SET SECTIONS=base,analysis,data_management&&SET NODE_ENV=production&&webpack --display-error-details --profile --json  > stats.json"
+    "dev:analysis": "cross-env SECTIONS=analysis NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
+    "dev:base": "cross-env SECTIONS=base NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
+    "dev:data_management": "cross-env SECTIONS=data_management NODE_ENV=develop webpack-dev-server --content-base dev --display-error-details --progress --color --inline --hot",
+    "build": "cross-env SECTIONS=base,analysis,data_management NODE_ENV=production webpack --display-error-details ",
+    "build:base": "cross-env SECTIONS=base NODE_ENV=production webpack --display-error-details ",
+    "build:stats": "cross-env SECTIONS=base,analysis,data_management NODE_ENV=production webpack --display-error-details --profile --json  > stats.json"
   },
   "repository": {
     "type": "git",
@@ -36,6 +32,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "clean-webpack-plugin": "^0.1.10",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
